# bit2me-token

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
contracts/: Token.sol  TokenManager.sol
scripts/: token_manager.py
tests/: conftest.py  constants.py  fixtures.py  test_token.py  test_token_manager.py
